--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@testing-library/jest-dom": "^5.17.0",
